--- a/layouts/index.html
+++ b/layouts/index.html
@@ -316,7 +316,7 @@
         <h1 class="wow fadeInUp" data-wow-duration="1.5s">{{ .title }}</h1>
         <div class="filtering wow fadeInUp" data-wow-duration="1.5s">
           <ul class="portfolio-navigation">
-            <li data-filter="all" class="hvr-sweep-to-right active">All Items</li>
+            <li data-filter="all" class="hvr-sweep-to-right active">Tous</li>
             {{ $categories := slice }}
             {{ range .portfolio_list }}
             {{ $categories = $categories | append .category }}
@@ -412,7 +412,7 @@
         <form method="POST" action="{{ .Site.Params.contact_form_action }}" data-toggle="validator">
           <div class="form-container row wow fadeInUp" data-wow-duration="1.5s">
             <div class="form-group col-lg-6">
-              <input class="form-control" type="text" name="username" id="username" placeholder="Name" required>
+              <input class="form-control" type="text" name="username" id="username" placeholder="Nom" required>
               <div class="help-block with-errors"></div>
             </div>
             <div class="form-group col-lg-6">
@@ -424,7 +424,7 @@
               <div class="help-block with-errors"></div>
             </div>
             <div class="form-group col-lg-12 sub-button">
-              <button class="submit form-control hvr-icon-push" type="submit" value="send"> Submit </button>
+              <button class="submit form-control hvr-icon-push" type="submit" value="send"> Envoyer </button>
             </div>
           </div>
         </form>
